--- a/public/index.jade
+++ b/public/index.jade
@@ -1,10 +1,14 @@
 html
 	head
 		title Gabriel J. Csapo
-		link(href='/css/site.css', rel='stylesheet')
-		link(href='/lib/bootstrap/css/bootstrap.min.css', rel='stylesheet')
-		link(href='/lib/font-awesome/css/font-awesome.css', rel='stylesheet')
-		script(src='/lib/d3.js', type='text/javascript')
+		style
+			include css/site.css
+		style
+			include lib/bootstrap/css/bootstrap.min.css
+		style
+			include lib/font-awesome/css/font-awesome.css
+		script
+			include lib/d3.js
 body
 	div.container
 		div.row
@@ -31,5 +35,7 @@ body
 						a(href="https://www.linkedin.com/in/gabrielcsapo").font-link
 							i.fa.fa-2x.fa-linkedin-square
 
-	script(src="/js/go.js", type='text/javascript')
-	script(src="/js/application.js", type='text/javascript')
+	script
+			include js/go.js
+	script
+			include js/application.js
