fixes styling issues and tagline grammar

--- a/public/index.jade
+++ b/public/index.jade
@@ -17,7 +17,7 @@ body
 				div.header
 					h1(style="font-weight:100 !important;") Gabriel J. Csapo
 					h4(style="font-weight:100 !important;") Web Developer
-					span(style="font-style:italic;") Solving the issues that truly matter, finding them is the hardest part.
+					span(style="font-style:italic;") On a quest to find the problems that have true impact.
 				br
 				br
 				div.graph
