--- a/public/css/site.css
+++ b/public/css/site.css
@@ -12,8 +12,12 @@ svg {
   filter: url("#glow");
 }
 .container {
-  margin-top: 3%;
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  height: 100% !important;
+}
+.inner-container {
+  align-self: center;
 }
 .nav {
   text-align: center;
