fixes awful scrolling this happens when the screen is below 1024 and bootstrap tries to auto scale the content inside (no)

--- a/public/index.jade
+++ b/public/index.jade
@@ -11,7 +11,7 @@ html
 			include lib/d3.js
 body
 	div.container
-		div.row.inner-container
+		div.inner-container
 			div.col-md-4.container-group(style="background-image:url('https://scontent-lax3-1.cdninstagram.com/hphotos-xpa1/t51.2885-15/e35/10549833_1727260620841051_270037565_n.jpg');height: 650px;background-size: cover;background-position:70% 20%;border-radius: 5px;")
 			div.col-md-8.col-xs-12.container-group
 				div.header
