--- a/public/index.jade
+++ b/public/index.jade
@@ -8,6 +8,8 @@ html
 		style
 			include lib/font-awesome/css/font-awesome.css
 		script
+			include lib/jquery.js
+		script
 			include lib/d3.js
 body
 	div.container
@@ -34,6 +36,18 @@ body
 						| &nbsp;&nbsp;
 						a(href="https://www.linkedin.com/in/gabrielcsapo").font-link
 							i.fa.fa-2x.fa-linkedin-square
+			div.row(style="text-align:center")
+				div.col-md-12.nav
+					a(href="#posts")
+						i.fa.fa-2x.fa-arrow-circle-o-down(style="position:absolute;bottom:0;top:25px;")
+
+	div.row(style="text-align:center")
+				div.col-md-12.nav
+					a(href="#")
+						i.fa.fa-2x.fa-arrow-circle-o-up(style="position:absolute;bottom:0;top:25px;")
+	div.container(style="text-align:center;")
+		div.inner-container
+			h3 No Posts Today
 
 	script
 			include js/go.js
