fixes mobile view scaling fixes source maps

--- a/public/index.jade
+++ b/public/index.jade
@@ -1,5 +1,6 @@
 html
 	head
+		meta(name="viewport" content="initial-scale=1.0, user-scalable=no")
 		title Gabriel J. Csapo
 		style
 			include css/site.css
@@ -37,7 +38,7 @@ body
 						a(href="https://www.linkedin.com/in/gabrielcsapo").font-link
 							i.fa.fa-2x.fa-linkedin-square
 			div.row.nav
-				div(style="position:absolute;bottom:15px;width:93%;text-align:center;")
+				div(style="position:absolute;bottom:15px;width:100%;text-align:center;")
 						a(href="#posts")
 							i.fa.fa-2x.fa-arrow-circle-o-down
 
