--- a/public/index.jade
+++ b/public/index.jade
@@ -21,30 +21,28 @@ body
 					h1(style="font-weight:100 !important;") Gabriel J. Csapo
 					h4(style="font-weight:100 !important;") Web Developer
 					span(style="font-style:italic;") On a quest to find the problems that have true impact.
-				br
-				br
 				div.graph.hidden-sm.hidden-xs
-				div.nav
-					div.col-md-4.col-xs-4.nav-list
+				div.row.nav
+					div.col-md-4.col-sm-4.col-xs-12.nav-list
 						a(href="https://www.paypal.com").font-link
 							i.fa.fa-2x.fa-briefcase &nbsp;&nbsp; PayPal
-					div.col-md-4.col-xs-4.nav-list
+					div.col-md-4.col-sm-4.col-xs-12.nav-list
 						a(href="https://www.google.com/maps/place/San+Jose,+CA/@37.296787,-122.3778534,9z/data=!3m1!4b1!4m2!3m1!1s0x808fcae48af93ff5:0xb99d8c0aca9f717b").font-link
 							i.fa.fa-2x.fa-location-arrow &nbsp;&nbsp; San Jose
-					div.col-md-4.col-xs-4.nav-list
+					div.col-md-4.col-sm-4.col-xs-12.nav-list
 						a(href="https://github.com/gabrielcsapo").font-link
 							i.fa.fa-2x.fa-github-square
 						| &nbsp;&nbsp;
 						a(href="https://www.linkedin.com/in/gabrielcsapo").font-link
 							i.fa.fa-2x.fa-linkedin-square
-			div.row.nav
-				div(style="position:absolute;bottom:15px;width:100%;text-align:center;")
-						a(href="#posts")
-							i.fa.fa-2x.fa-arrow-circle-o-down
+
+	div.row.nav.nav-posts-parent
+		a(href="#posts").nav-posts.font-link
+			i.fa.fa-2x.fa-arrow-circle-o-down
 
 	div.row(style="text-align:center")
 		div.col-md-12.nav
-			a(href="#")
+			a(href="#top")
 				i.fa.fa-2x.fa-arrow-circle-o-up(style="position:absolute;bottom:0;top:25px;")
 	div.container(style="text-align:center;")
 		div.inner-container
