--- a/public/index.jade
+++ b/public/index.jade
@@ -45,8 +45,23 @@ body
 			a(href="#top")
 				i.fa.fa-2x.fa-arrow-circle-o-up(style="position:absolute;bottom:0;top:25px;")
 	div.container(style="text-align:center;")
-		div.inner-container
-			h3 No Posts Today
+		div.inner-container(style="-moz-column-width: 16em;-webkit-column-width: 16em;-moz-column-gap: 1em;-webkit-column-gap: 1em;")
+			if posts
+				each post, index in posts
+					if(post.type == 'post')
+						div.post.post-content
+							a(href="/#{post.link}")
+								h4(style="margin-top:45%;font-weight:100") #{post.title}
+								small(style="width:85%;margin:0 auto") #{post.subtitle}
+
+					else
+						div.post.post-img
+							img(alt='#{post.title}', src='data:img/png;base64,#{post.src}')
+							small #{post.title}
+			else 
+				No Posts 
+
+
 
 	script
 			include js/go.js
