goodbye express site, hello static site :)

--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -40,7 +40,7 @@ a, a:focus, a:hover {
 }
 html, body {
     height: 100%;
-    background-image: url('/assets/background.png');
+    background-image: url('public/assets/background.png');
     background-size: cover;
     background-position: 10% 50%;
     border-radius: 5px;
