--- a/public/lib/font-awesome/css/font-awesome.css
+++ b/public/lib/font-awesome/css/font-awesome.css
@@ -7,7 +7,12 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0');
-  src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0') format('woff'), url('public/lib/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
+  src: url('public/lib/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0')
+   format('embedded-opentype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0')
+   format('woff2'), url('public/lib/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0')
+   format('woff'), url('public/lib/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0')
+   format('truetype'), url('public/lib/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular')
+   format('svg');
   font-weight: normal;
   font-style: normal;
 }
