fixes issue with iphone 6 viewport, updates grunt grunt-screenshot now compresses files from 150kb to 55kb

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,12 @@ html, body {
     }
 }
 
+@media (max-width: 375) {
+    .quote-container {
+        height: 230px !important;
+    }
+}
+
 @media (max-width: 320) {
     .quote-container {
         height: 230px !important;
