--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,23 +4,50 @@ html, body {
     -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
     height: 100%;
-    background-color: #d9d2c6;
+}
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+.btn.btn-black {
+    border-radius: 100px;
+    padding: 12px;
+}
+.btn.btn-black:hover {
+    background-color: rgb(75, 75, 75);
+}
+
+@media(max-width: 860) {
+    .quote-container {
+        height: 200px !important;
+    }
+}
+
+@media(max-width: 720) {
+    .quote-container {
+        height: 200px !important;
+    }
 }
 
 @media (max-width: 640) {
     .quote-container {
-        height: 190px !important;
+        height: 200px !important;
     }
 }
 
 @media (max-width: 375) {
     .quote-container {
-        height: 230px !important;
+        height: 240px !important;
     }
 }
 
 @media (max-width: 320) {
     .quote-container {
-        height: 230px !important;
+        height: 240px !important;
     }
 }
