--- a/public/index.pug
+++ b/public/index.pug
@@ -7,6 +7,7 @@ html
         style
             include css/index.css
 body
+    svg(class="directed-graph")
     div(class="navbar navbar-center")
        div(class="container")
            div(class="navbar-title")
