fixes issue with graph generation updates package.json to have the needed modules updates npm ruls to point at the right links

--- a/public/index.pug
+++ b/public/index.pug
@@ -49,7 +49,7 @@ body
                 div.col-1-12
 
     div(class="full-screen" style="position:relative;")
-        div.grid(style="padding-bottom:85px;")
+        div.grid(style="padding-bottom:150px;")
             div.col-1-12
             div.col-10-12
                 h3(id="projects-header" style="padding:10px;") #Projects
@@ -57,7 +57,7 @@ body
             div.col-1-12
 
     div(class="navbar navbar-center" style="position:fixed;bottom:0;")
-        div(class="container text-center") created with 🚀 by &nbsp;
-            a(href="https://www.github.com/gabrielcsapo" target="_blank") gabrielcsapo
+        div(class="container text-center") created by &nbsp;
+            a(href="https://www.github.com/gabrielcsapo" target="_blank") gabrielcsapo 🐒
 
     script(charset="utf-8" src="./public/build.js")
