--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,44 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
-html, body {
-    font-family: 'Open Sans', sans-serif;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    height: 100%;
-    overflow: hidden;
+html, body, #root {
+  font-family: 'Open Sans', sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .btn.btn-black {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .btn.btn-black:hover {
-    background-color: rgb(75, 75, 75);
+  background-color: rgb(75, 75, 75);
 }
 
 .tooltip:after, [data-tooltip]:after {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .quote-container {
-    z-index: 100;
-    background-color: rgba(255, 255, 255, 0.44);
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-
-.navbar {
-    padding-top: 25px;
-    background-color: rgba(255, 255, 255, 0.44);
+  z-index: 100;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .navbar-bottom {
-    padding-top: 0;
-    width: 80%;
-    position: fixed;
-    bottom: 0;
+  padding-top: 0;
+  position: fixed;
+  bottom: 0;
 }
 
 #container {
-    text-align: center;
-    position: relative;
-    margin: 0 auto;
-    width: 80%;
-    height: 100%;
+  text-align: center;
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
 }
