--- a/src/index.css
+++ b/src/index.css
@@ -29,16 +29,13 @@ html, body, #root {
   right: 0;
 }
 
-.navbar-bottom {
-  padding-top: 0;
-  position: fixed;
-  bottom: 0;
-}
-
 #container {
   text-align: center;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+#container-content {
+  flex: 1;
 }
