--- a/index.css
+++ b/index.css
@@ -1,9 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
 html, body, #root {
-  font-family: 'Open Sans', sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   height: 100%;
   width: 100%;
 }
@@ -12,13 +10,43 @@ html, body, #root {
   border-radius: 5px;
 }
 
-.quote-container {
-  z-index: 100;
-  margin: auto;
+.project-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+
+.project {
+  width: 150px;
+  height: 150px;
+  border: 1px solid #dedede;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  position: relative;
+}
+
+.project-tags {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  bottom: 0;
+  line-height: 50px;
+  border-top: 1px solid #dedede;
+  width: 100%;
+  padding-left: 2px;
+  padding-right: 2px;
+  margin-left: -10px;
+  font-weight: 200;
+  font-size: 10px;
 }
 
 #container {
