--- a/site/index.css
+++ b/site/index.css
@@ -20,3 +20,88 @@ html, body, #root {
 #container-content {
   flex: 1;
 }
+
+.language-block {
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 5px;
+  vertical-align: middle;
+}
+
+.language {
+  border: 1px solid #dedede;
+  height: 8px;
+  width: 8px;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.language-JavaScript {
+  border: 1px solid #f8ff67;
+  background-color: #f8ff67;
+}
+
+.language-* {
+  border: 1px solid #dedede;
+  background-color: #dedede;
+}
+
+.list {
+  list-style: none;
+  width: 100%;
+  display: inline-block;
+}
+
+.list-item__link-name {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.list-item__description {
+  font-weight: 300;
+}
+
+.list-item__link {
+  text-decoration: none;
+  color: black;
+}
+
+.list-item__topics-topic {
+  border: 1px solid #dedede;
+  border-radius: 15px;
+  padding: 2px;
+  margin: 2px;
+}
+
+.product-list-item {
+  line-height: 21px;
+  text-align: left;
+  position: relative;
+  border-radius: 5px;
+  border: 1px solid #dedede;
+  min-width: 150px;
+  display: inline-block;
+  height: 75px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.product-list-item > .list-item__link > .list-item__description {
+  margin-top: 5px;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.product-list-item:hover > .list-item__topics {
+  display: block;
+}
+
+.utility-list-item {
+  text-align: left;
+  margin-top: 10px;
+}
+
+.utility-list-item > .list-item__topics {
+  display: inline-block;
+}
