--- a/site/index.css
+++ b/site/index.css
@@ -21,12 +21,37 @@ html, body, #root {
   flex: 1;
 }
 
+.img-centered--absolute {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: -50%;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: -1;
+}
+
+.img-text {
+  color: rgba(0,0,0,.60);
+  border-radius: 2px;
+  background: rgba(229, 227, 235, 0.65);
+  width: auto;
+  padding: 3px;
+  display: inline-block;
+}
+
+.btn.btn-white {
+  box-shadow: 2px 10px 2px rgba(0,0,0,0.1)
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
 .stars-block {
   font-size: 12px;
 }
 
 .stars-block > .stars-block__star {
   color: rgb(88, 88, 88);
+  margin-left: 2px;
 }
 
 .language-block {
